--- a/views/projects.html
+++ b/views/projects.html
@@ -4,56 +4,82 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Nombre del Proyecto</title>
+  <title>Mayra Cruz | Frontend Developer</title>
   <link rel="shortcut icon" type="image/x-icon" href="assets/icon/logo-page.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">  
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="css/main.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119244767-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    
+    gtag('config', 'UA-119244767-1');
+  </script>
 </head>
 <body>
-  <section id="projects">
-    <section class="jumbotron">
-      <div class="container text-center">
-        <h2 class="name">Nombre del Proyecto</h2>
-        <img src="../assets/images/venus-02.jpg" alt="">   
-      </div> 
+  <section class="hide" id="landing">
+    <nav class="navbar navbar-expand-lg">  
+      <a class="navbar-brand" href="/">
+        <img src="/assets/images/mc-logo-white.png" width="80" height="80" alt="mc-logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#landing-navbar" aria-controls="landing-navbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="landing-navbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#about-me">Acerca de mí</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#my-work">Mi trabajo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contáctame</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <section id="content-projects">
+      
     </section>
-  
-    <section class="container project-d">
+
+    <footer class="container-fluid" id="contact">
       <div class="row">
-        <div class="col-md-9">
-          <h3>Descripción del proyecto</h3>
-          <p>E-commerce dirigo a mujeres jóvenes que disfrutan de un estilo en tendencia así como de las prendas sencillas y cómodas. Proyecto colaborativo que aprovecha el uso de la técnica SPA para proveer una interfaz sencilla e intuitiva, permite al usuario saber siempre en que sección se encuentra gracias al uso del routing. Aprovecha el uso de las API's para ofrecer una extensa variedad de productos (Etsy) y un método de pago sencillo (PayPal).</p>
+        <div class="col-md-4 text-center align-items-center">
+          <h2 class="h2-footer">Contáctame</h2>
+          <br>
+          <p><i class="far fa-envelope"></i><a href="mailto:#">velazquez.leonora@gmail.com</a></p>
         </div>
-        <div class="col-md-3 details-project">
-          <div>
-            <h4>Tipo de proyecto</h4>
-            <p>Website</p>
+        <div class="col-md-4 text-center">
+          <div class="social-network">
+            <a class="" href="https://github.com/cruzmayra/" target="_blank"><i class="fab fa-github"></i></a>
+            <a class="" href="https://www.linkedin.com/in/cruz-mayra" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a class="" href="https://www.facebook.com/cruz.mayr4" target="_blank"><i class="fab fa-facebook-f"></i></a>
           </div>
-          <div>
-            <h4>Que hice :)</h4>
-            <p>Manejo del DOM</p>
-          </div>
-          <div>
-            <h4>Tecnologías usadas</h4>
-            <p>HTML, CSS3/SASS, Wordpress, PHP, JQuery, Illustrator</p>
-          </div>
-          <div>
-            <h4>Ver el proyecto</h4>
-            <p><a href=""><i class="fas fa-eye"></i></a></p>
-            <h4>Ver código</h4>
-            <p><a href=""><i class="fab fa-github-alt"></i></a></p>
-          </div>
+          <button type="button" class="btn btn-lg cv-footer"><a href="assets/curriculum-mayra-cruz.pdf" target="_blank">Descarga mi CV</a></button>      
+          <p>Trabajemos juntos :)</p>      
+        </div>
+        <div class="col-md-4 d-flex justify-content-center align-items-center">
+          <p>© 2018 Coded with <i class="fas fa-heart"></i> by Mayra Cruz</p>
         </div>
       </div>
-    </section>
+      </footer>
+      
   </section>
-
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="../js/app.js"></script>
+  <script type="text/javascript" src="js/vendors/page.js"></script>
+  <script type="text/javascript" src="js/data.js"></script>  
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
