--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,14 @@
 body {
   background: #a9ddd6;  
   font-family: 'Josefin Sans', sans-serif;
-  padding: 0;
+  padding: 10% 0 0 0;
 }
 
 #landing-navbar > ul > li> a,
-nav a,
-.h2-footer {
+/* nav a, */
+#my-work > div > div > div > div > a,
+.h2-footer,
+footer a {
   color: #fff;
 }
 
@@ -30,6 +32,7 @@ h4 {
 }
 
 footer {
+  color: #fff;
   margin-top: 4%;
 }
 
@@ -41,7 +44,7 @@ footer,
   background: #bf1363;
 }
 
-#container a,
+#content-me a,
 #about-me > div:nth-child(1) > div.col-md-8.col-sm-12.text-center.about-me > div > p:nth-child(2) > a {
   color: #bf1363;
   text-decoration: none;
@@ -51,16 +54,11 @@ footer,
   display:none;
 }
 
-.show {
-  display: block;
-}
-
 #about-me {
   padding: 3% 0;
 }
 
 #about-me img {
-  /* transform: translate(29.5337px, -5.26858px); */
   width: 90%;
 }
 
@@ -73,7 +71,10 @@ footer,
   margin-left: 65%;
 }
 
-footer a,
+#landing-navbar > ul > li > a {
+  font-size: 1em;  
+}
+
 #about-me button a,
 .btn {
   color: #fff;
@@ -88,7 +89,6 @@ footer a:hover,
 }
 
 #about-me > div.row.skills > div img {
-  /* margin: 0 2%; */
   width: 3em;
 }
 
@@ -120,6 +120,7 @@ footer a:hover,
   font-size: 2.6em;
 }
 
+#nav-presentation > div > ul > li > a,
 #projects h4,
 .cv-footer a  {
   color:#bf1363;
@@ -152,7 +153,7 @@ footer a:hover,
   margin: 3% 0%;
 }
 
-.progress-bar {
+/* .progress-bar {
   background-color: #4f4f4f;
   border-radius: 5px;
   height: 1.5em;
@@ -166,7 +167,7 @@ footer a:hover,
   border-radius: 3px;  
   height:100%;
   transition: width .4s ease-in-out;    
-}
+} */
 
 .stripes span {
   background-size: 30px 30px;
@@ -206,6 +207,7 @@ footer a:hover,
 }
 
 .social-network a {
+  color: #fff;
   font-size: 2em;  
   margin: 3%;
 }
