--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,9 @@ body {
   background: #fff;
   color: #38618c;  
   font-family: 'Josefin Sans', sans-serif;
-  /* padding: 10% 0 0 0; */
 }
 
 #landing-navbar > ul > li> a,
-/* nav a, */
 #my-work > div > div > div > div > a,
 .h2-footer,
 footer a {
@@ -42,18 +40,8 @@ footer {
   background: #fa7268;
 }
 
-.intermedio span,
-.basic span {
-  background: #bf1363;
-}
-
 #content-me a {
   color: #fa7268;
-}
-
-#about-me > div:nth-child(1) > div.col-md-8.col-sm-12.text-center.about-me > div > p:nth-child(2) > a {
-  color: #bf1363;
-  text-decoration: none;
 }
 
 .hide {
@@ -119,7 +107,6 @@ footer a:hover,
 
 
 #about-me > div.row.skills > div.soft i {
-  /* color: #ffe74c; */
   font-size: 3em;
 }
 
@@ -130,15 +117,12 @@ footer a:hover,
 
 #nav-presentation a,
 #principal-nav a,
-#landing-navbar > ul > li > a
-/* #nav-presentation > div > ul > li > a, */
-/* #projects h4,
-.cv-footer a  */
-{
+#landing-navbar > ul > li > a {
   color: #38618c;
 }
 
-#projects > section.container.project-d > div > div.col-md-3.details-project > diV > p > a > i {
+#projects > section.container.project-d > div > div.col-md-3.details-project > diV > p > a > span {
+  color: #fa7268;
   font-size: 2.5em;
 }
 
@@ -165,41 +149,12 @@ footer a:hover,
   margin: 3% 0%;
 }
 
-/* .progress-bar {
-  background-color: #4f4f4f;
-  border-radius: 5px;
-  height: 1.5em;
-  margin-top: 3%;           
-  padding: 1%;
-  width: 90%;
-}
-
-.progress-bar span {
-  display: inline-block;
-  border-radius: 3px;  
-  height:100%;
-  transition: width .4s ease-in-out;    
-} */
-
-.stripes span {
-  background-size: 30px 30px;
-  background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%,
-                      transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%,
-                      transparent 75%, transparent);            
-  
-  animation: animate-stripes 3s linear infinite;             
-}
-
-@keyframes animate-stripes {
-  0% {background-position: 0 0;} 100% {background-position: 60px 0;}
-}
-
 .description-project {
   padding: 25% 0%;
 	width: 100%;
 	height: 100%;
 	background: rgba(0,0,0,0.9);
-	color: #a9ddd6;
+	color: #ffe74c;
   display: none;
 }
 
@@ -224,7 +179,7 @@ footer a:hover,
 }
 
 .jumbotron {
-  background: #a9ddd6;
+  background: #fff;
 }
 
 .jumbotron img {
@@ -232,12 +187,15 @@ footer a:hover,
 }
 
 .details-project {
-  border-left: 2px solid #bf1363;
+  border-left: 2px solid #fa7268;
 }
 
 .project-d img {
   width: 50%;
 }
+ .project-d h3 {
+   margin-top: 0;
+ }
 
 .project-d .col-md-9 > p {
   text-align: justify;
